--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "axios": "^0.19",
     "babel-eslint": "^10.0.1",
     "bootstrap": "^4.1.0",
+    "browser-sync": "^2.26.7",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
