--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/style-resources": "^1.0.0",
     "axios": "^0.19",
     "babel-eslint": "^10.0.1",
     "bootstrap": "^4.1.0",
