heroku デプロイ設定

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "description": "My bedazzling Nuxt.js project",
+  "description": "sushi orderlist create app",
+  "license": "UNLICENSED",
+  "engines": {
+    "node": "12.9.0",
+    "npm": "6.11.2"
+  },
   "author": "xxx-kohe-xxx",
   "private": true,
   "scripts": {
@@ -15,7 +20,8 @@
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "postinstall": "npm install && npm build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
